[metadata]
name = solve-sum-minmax
version = 0.0.2
author = Yewen Zhou
author_email = yz4175@columbia.edu
description = A package to solve the sum of min/max equations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hegelim/solve-sum-minmax
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src